# unipr

./: .gitignore  README.md
Algebra e Geometria/Vettori/: CMakeLists.txt  main.cpp
Algebra e Geometria/Vettori/common/: function.cpp  function.h  functions.h
Algebra e Geometria/Vettori/common/console/: console.cpp
Algebra e Geometria/Vettori/common/start/: start.cpp  start.h
Algebra e Geometria/Vettori/matrici/: matrice.cpp  matrice.h
Algebra e Geometria/Vettori/vettore/: vettore.h
Algoritmi e Strutture Dati/: heap.md
Calcolo Numerico/lab/: grafica190326.m  graficaEs2.asv  graficaEs2.m  graficaEs3.m  lezione190326.m
Calcolo Numerico/scripts/: differenza_risultati.m  esercitazione1.m  prova.m
Intelligenza Artificiale/: Lezione_1.md  Link-utili.md
Laboratorio Algoritmi/: .gitignore
Laboratorio Algoritmi/Materiale didattico-20260312/: ANALISI.md  consegna1-loader  data.xlsx  (+2 more)
Metodologie Di Programmazione/: .gitignore  create-lesson.sh
Metodologie Di Programmazione/_EvoSpan/: CMakeLists.txt
Metodologie Di Programmazione/_EvoSpan/Classes/Activity/: activity.h
Metodologie Di Programmazione/_EvoSpan/Classes/Business/Customer/: customer.cpp  customer.h
Metodologie Di Programmazione/_EvoSpan/Classes/Business/Supplier/: supplier.cpp  supplier.h
Sistemi Informativi e Gestione D'Impresa/: Analisi_di_Porter.md  Caratterstiche_di_un_sistema_informatico.md  ICT_e_strategie.md  Il_ruolo_delle_ICT_nella_strategia.md  Impresa_vs_Azienda.md  Organizzazione_Di_Impresa_e_ICT.md  Outsourcing.md  Piramide_di_Anthony.md  README.md
_lezioni_python/: L1.md  L2.md
(+253 files in other folders)
